backing up progress on html and css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,129 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Poppins"rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- write some HTML! -->
+
+    <nav>
+        <div class="alogo"><a href="#"><img class="logo" src="imgs/logo.svg"></a></div>
+        <ul class="navbar">
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Advantages</a></li>
+          <li><a href="#">Galleries</a></li>
+          <li><a href="#">Products</a></li>
+        </ul>
+    </nav>
+
+     <!-- first section -->
+
+    <div class="spaceship">
+      <div class="container">
+        <h1>Introduing Falcon 9</h1>
+          <div class="subcontainer">
+            <h2>We make dreams come true</h2>
+              <div class="subsubcontainer">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <!-- second section -->
+    <div class="features">
+        <div class="features1 subfeatures">
+            <img src="imgs/icon_check.svg">
+            <h3>Amazing Feature 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button>Get it</button>
+        </div>
+        <div class="features2 subfeatures">
+            <img src="imgs/icon_reload.svg">
+            <h3>Amazing Feature 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button>Sell it</button>
+        </div>
+        <div class="features3 subfeatures">
+            <img src="imgs/icon_fingerprint.svg">
+            <h3>Amazing Feature 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button>Do it</button>
+        </div>
+    </div>
+
+    <!-- third section -->
+
+      <div class="greycontainer">
+          <h1>Some cool text</h1>
+          <p>Lorem...</p>
+          <div class="subgreycontainer">
+            <h4>This looks cool</h4>
+            <p>Hover me if you like random animations</p>
+          </div>
+      </div>
+      <div class="bluecontainer">
+          <h1>Slick gradient</h1>
+          <p>Lorem ipsum?</p>
+      </div>
+      <div class="catscontainer">
+          <div class="catsrow">
+              <img class="cats" src="imgs/tesla.jpg">
+              <img class="cats" src="imgs/procat.jpg">
+              <img class="cats" src="imgs/hyperloop.jpg">
+          </div>
+          <div class="catsrow">
+              <img class="cats" src="imgs/sneakycat.jpg">
+              <img class="cats" src="imgs/falconrocket.jpeg">
+              <img class="cats" src="imgs/funnycat.jpg">
+          </div>
+      </div>
+
+    <!-- fourth section -->
+    
+    <div class="formcontainer">
+          <form>
+            <label>Register for our mailing list:</label>
+              <div class="formtext">
+                  <input class="inputtext" type="text">
+                  <button></button>
+               </div>
+              <div class="formcheck">
+                <input class="checkbox" type="checkbox">
+                <label>Send me daily cat images</label></lbbel>
+              </div>
+          </form>
+    </div>
+
+    <div class="listsection">
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Legal Notes</a></li>
+              <li><a href="#">Copyright</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Legal Notes</a></li>
+              <li><a href="#">Copyright</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Legal Notes</a></li>
+              <li><a href="#">Copyright</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Legal Notes</a></li>
+              <li><a href="#">Copyright</a></li>
+            </ul>
+    </div>
+
   </body>
+
 </html>
