project one html and css

--- a/imgs/index.html_#advantages.html
+++ b/imgs/index.html_#advantages.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
-    <link href="css/styles.css" rel="stylesheet" />
+<!-- saved from url=(0103)file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#advantages -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./index.html_#advantages_files/css" rel="stylesheet">
+    <link href="./index.html_#advantages_files/styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -15,24 +12,12 @@
         <div class="navlogo"></div>
         <div class="dropdown">
           <div class="burger">
-            <img class="burgerbutton" src="imgs/menu.svg" />
+            <img class="burgerbutton" src="./index.html_#advantages_files/menu.svg">
             <ul class="navul">
-              <li>
-                <a href="#features">Features</a>
-                <div class="border"></div>
-              </li>
-              <li>
-                <a href="#advantages">Advantages</a>
-                <div class="border"></div>
-              </li>
-              <li>
-                <a href="#galleries">Galleries</a>
-                <div class="border"></div>
-              </li>
-              <li>
-                <a href="#products">Products</a>
-                <div class="border"></div>
-              </li>
+              <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#features">Features</a></li>
+              <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#advantages">Advantages</a></li>
+              <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#galleries">Galleries</a></li>
+              <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#products">Products</a></li>
             </ul>
           </div>
         </div>
@@ -63,7 +48,7 @@
       <div class="featurescontainer">
         <div class="features">
           <div class="features1 subfeatures">
-            <img src="imgs/icon_check.svg" />
+            <img src="./index.html_#advantages_files/icon_check.svg">
             <h3>Amazing Feature 1</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -74,7 +59,7 @@
             <button>Get it</button>
           </div>
           <div class="features2 subfeatures">
-            <img src="imgs/icon_reload.svg" />
+            <img src="./index.html_#advantages_files/icon_reload.svg">
             <h3>Amazing Feature 2</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -85,7 +70,7 @@
             <button>Sell it</button>
           </div>
           <div class="features3 subfeatures">
-            <img src="imgs/icon_fingerprint.svg" />
+            <img src="./index.html_#advantages_files/icon_fingerprint.svg">
             <h3>Amazing Feature 3</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -122,29 +107,29 @@
         <div class="catsrow">
           <div class="imagecontainer">
             <span>Tesla</span>
-            <img class="cats" src="imgs/tesla.jpg" />
+            <img class="cats" src="./index.html_#advantages_files/tesla.jpg">
           </div>
           <div class="imagecontainer">
             <span>Pro Cat</span>
-            <img class="cats" src="imgs/procat.jpg" />
+            <img class="cats" src="./index.html_#advantages_files/procat.jpg">
           </div>
           <div class="imagecontainer">
             <span>Hyperloop</span>
-            <img class="cats" src="imgs/hyperloop.jpg" />
+            <img class="cats" src="./index.html_#advantages_files/hyperloop.jpg">
           </div>
         </div>
         <div class="catsrow">
           <div class="imagecontainer">
             <span>Sneaky Cat</span>
-            <img class="cats" src="imgs/sneakycat.jpg" />
+            <img class="cats" src="./index.html_#advantages_files/sneakycat.jpg">
           </div>
           <div class="imagecontainer">
             <span>Falcon Rocket</span>
-            <img class="cats" src="imgs/falconrocket.jpeg" />
+            <img class="cats" src="./index.html_#advantages_files/falconrocket.jpeg">
           </div>
           <div class="imagecontainer">
             <span>Funny Cat</span>
-            <img class="cats" src="imgs/funnycat.jpg" />
+            <img class="cats" src="./index.html_#advantages_files/funnycat.jpg">
           </div>
         </div>
       </div>
@@ -155,13 +140,13 @@
         <form>
           <label>Register for our mailing list:</label>
           <div class="formtext">
-            <input class="inputtext" type="text" />
+            <input class="inputtext" type="text">
             <button>
-              <img class="sendbutton" src="imgs/icon_send.svg" />
+              <img class="sendbutton" src="./index.html_#advantages_files/icon_send.svg">
             </button>
           </div>
           <div class="formcheck">
-            <input class="checkbox" type="checkbox" />
+            <input class="checkbox" type="checkbox">
             <label>Send me daily cat images</label>
           </div>
         </form>
@@ -170,29 +155,30 @@
 
     <div class="listsection">
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Legal Notes</a></li>
-        <li><a href="#">Copyright</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">About Us</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Privacy Policy</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Legal Notes</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Copyright</a></li>
       </ul>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Legal Notes</a></li>
-        <li><a href="#">Copyright</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">About Us</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Privacy Policy</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Legal Notes</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Copyright</a></li>
       </ul>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Legal Notes</a></li>
-        <li><a href="#">Copyright</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">About Us</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Privacy Policy</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Legal Notes</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Copyright</a></li>
       </ul>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Legal Notes</a></li>
-        <li><a href="#">Copyright</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">About Us</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Privacy Policy</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Legal Notes</a></li>
+        <li><a href="file:///Users/jessicamosullivan/Documents/concordia-bootcamps/project-m1-htmlcss/index.html?#">Copyright</a></li>
       </ul>
     </div>
-  </body>
-</html>
+  
+
+</body></html>
